--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/Character/GI_GameInstance.GI_GameInstance_C
 GameDefaultMap=/Game/UI/L_MainMenu.L_MainMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Blueprints/Character/GM_Main.GM_Main_C
